public/css/style.css
/* ... */
  section.content {
    margin-top: 150px;
  }
  header.sticky {
    padding: 10px 20px;
  }  
  /* .sticky {
    position: fixed;
    top: 0;
    width: 100%;
    
    
  }*/
  .logo{
    width: 250px;
    height: auto;
    webkit-transition:all 400ms linear;
    -moz-transition:all 400ms linear;
    -o-transition:all 400ms linear;
    -ms-transition:all 400ms linear;    
    transition:all 400ms linear;
   
  }  
   .sticky .logo {
    position: fixed;
    top : 0;
    left : 0;
    
    
    padding: 30px;
    background-color: #FFF;
    
    margin-top: 10px;
    margin-left: 10px;
    
    
  }
  @keyframes move {
    0%{
      top:0; left:0;
    }
    100% {
      transform:  translate(20px, 20px);
    }
  }
  
  
  .logoimg{
      max-width: 300px;
  } 
  
  
  
  /* .sticky + .content {
    padding-top: 60px;
  } */ 

